--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,14 @@ buildscript {
             jcenter()
             maven { url "https://dl.bintray.com/cuba-platform/main" }
         }
+        // TODO: remove when 7.1.0 will be released
+        maven {
+            url 'https://repo.cuba-platform.com/content/groups/work'
+            credentials {
+                username 'cuba' 
+                password 'cuba123'
+            }
+        }
     }
 
     dependencies {
