--- a/modules/portal/src/com/haulmont/addon/jpawebapi/portal-app.properties
+++ b/modules/portal/src/com/haulmont/addon/jpawebapi/portal-app.properties
@@ -47,3 +47,4 @@ cuba.localeSelectVisible = false
 
 jpawebapi.mapping.url = /api/*
 jpawebapi.springContextConfig = +com/haulmont/addon/jpawebapi/sys/jpawebapi-dispatcher-spring.xml
+cuba.rest.allowedOrigins = "*"
