--- a/modules/web/src/com/haulmont/addon/jpawebapi/web-app.properties
+++ b/modules/web/src/com/haulmont/addon/jpawebapi/web-app.properties
@@ -30,3 +30,4 @@ cuba.web.theme = hover
 
 jpawebapi.mapping.url = /dispatch/api/*
 jpawebapi.springContextConfig = +com/haulmont/addon/jpawebapi/sys/jpawebapi-dispatcher-spring.xml
+cuba.rest.allowedOrigins = "*"
