--- a/modules/core/src/com/haulmont/addon/jpawebapi/app.properties
+++ b/modules/core/src/com/haulmont/addon/jpawebapi/app.properties
@@ -31,3 +31,6 @@ cuba.anonymousSessionId = 9a564ce1-92a3-7343-9c9d-d890de75263a
 cuba.webContextName = jpawebapi-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+cuba.security.undefinedAccessPolicy=ALLOW
+cuba.security.defaultPermissionValuesConfigEnabled=true
+cuba.security.minimalRoleIsDefault=false
