--- a/modules/web/src/com/haulmont/addon/jpawebapi/web-app.properties
+++ b/modules/web/src/com/haulmont/addon/jpawebapi/web-app.properties
@@ -48,3 +48,5 @@ cuba.web.theme = hover
 jpawebapi.mapping.url = /dispatch/api/*
 jpawebapi.springContextConfig = +com/haulmont/addon/jpawebapi/sys/jpawebapi-dispatcher-spring.xml
 cuba.rest.allowedOrigins = "*"
+cuba.rest.securityScope=GENERIC_UI
+reporting.allReportsAvailableForAdmin=true
