--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - chmod +x ./gradlew
 
 script:
-  - ./gradlew --no-daemon assemble check test
+  - ./gradlew --no-daemon assemble test
 
 cache:
   directories:
